--- a/bonus.html
+++ b/bonus.html
@@ -116,7 +116,7 @@
         </aside> 
         <section class="content__wrapper content__wrapper-bonus">
            <section class="content article content__page">
-            <p>Formidabile sito di scommesse online, con 22Bet potrete realizzare i vostri desideri, trasformando il vostro hobby preferito in una fonte di guadagno. Questo allibratore è esperto di servizi di casinò e sportsbook, consentendo a chiunque lo utilizzi di scegliere l’esperienza di gioco che più li gratifichi.</p>
+            <p>Formidabile sito di scommesse online, con <a href="#" class="article__link">22Bet</a>  potrete realizzare i vostri desideri, trasformando il vostro hobby preferito in una fonte di guadagno. Questo allibratore è esperto di servizi di casinò e sportsbook, consentendo a chiunque lo utilizzi di scegliere l’esperienza di gioco che più li gratifichi.</p>
             <p>Si possono effettuare scommesse in pochi clic e bastano appena 24 ore per ricevere il denaro vinto.</p>
           </section> 
           <section class="content page-nav content__page  content__page-bonus">
@@ -159,7 +159,7 @@
            <section class="content article content__page">
             <h2 class="">BetLabel Asia Registration Process</h2>
             <p class="">
-              Online betting allows using different types of payments. With 22BET, you may deposit money using such options:
+              Online betting allows using different types of payments. With <a href="#" class="article__link">22Bet</a> , you may deposit money using such options:
 
 
             </p>
