--- a/bonus.html
+++ b/bonus.html
@@ -100,7 +100,7 @@
           
         </section>
       <div class="main__wrapper main__wrapper-bonus">
-          <aside class="sidebar sidebar__left">
+          <aside class="sidebar sidebar__left sidebar__left-bonus">
           <div class="sidebar__desk">In this review</div>
           <ul class="sidebar__list">
             <li><a href="#">Review of 20Bet</a></li>
