--- a/app.html
+++ b/app.html
@@ -23,13 +23,13 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/media.css" />
-    <link rel="icon" href="./images/Group.png" type="image/x-icon" />
+    <link rel="icon" href="./images/Vector.png" type="image/x-icon" />
   </head>
   <body>
     <header class="header">
       <section class="content header__content">
         <a href="./index.html" class="logo header__logo"
-          ><img src="./images/logo.svg" alt="logo"
+          ><img src="./images/logo.svg" alt="logo" title
         /></a>
         <button class="header__btn-menu">
           <svg
