--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/media.css" />
-    <link rel="icon" href="./images/Group.png" type="image/x-icon" />
+    <link rel="icon" href="./images/Vector.png" type="image/x-icon" />
   </head>
   <body>
     <header class="header">
       <section class="content header__content">
         <a href="#" class="logo header__logo"
-          ><img src="./images/logo.svg" alt="logo"
+          ><img src="./images/logo.svg" alt="logo" title=""
         /></a>
         <button class="header__btn-menu">
           <svg
@@ -72,13 +72,13 @@
     </header>
      <main class="main">
       
-        <section class=" hero hero__content">
+        <section class=" hero hero__content ">
           <div class="background  ">
             <img src="./images/bg-main.jpg" alt="hero" title>
           
           </div>
          <div class="hero__wrap">
-          <div class="hero__data">
+          <div class="hero__data hero__data-main">
             <div class="hero__rating" itemscope itemtype="http://schema.org/Game">
               <p>Overall Rating:</p>
               <meta itemprop="name" content="https://20bett.co/">
@@ -287,15 +287,15 @@
                 <tr>
                   <td>Sports Betting:</td>
                   <td>
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy.svg" alt="trophy">
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy.svg" alt="trophy" title>
                   </td>
                   <td>9/10</td>
                 </tr>
@@ -303,31 +303,31 @@
                 <tr>
                   <td>Casino Games:</td>
                   <td>
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
                   </td>
                   <td>4/10</td>
                 </tr>
   
-                <tr>
+                <tr> title
                   <td>Welcome Bonus:</td>
                   <td>
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
                   </td>
                   <td>7/10</td>
                 </tr>
@@ -335,15 +335,15 @@
                 <tr>
                   <td>Weekly Promotions:</td>
                   <td>
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                    <img src="./images/trophy-green.svg" alt="trophy">
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
                   </td>
                   <td>10/10</td>
                 </tr>
@@ -351,15 +351,15 @@
                 <tr>
                   <td>Customer Support:</td>
                   <td>
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
                   </td>
                   <td>8/10</td>
                 </tr>
@@ -367,15 +367,15 @@
                 <tr>
                   <td>Banking Options:</td>
                   <td>
-                    <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy-green.svg" alt="trophy">
-                  <img src="./images/trophy.svg" alt="trophy">
+                    <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy-green.svg" alt="trophy" title>
+                  <img src="./images/trophy.svg" alt="trophy" title>
                   </td>
                   <td>9/10</td>
                 </tr>
